--- a/package.json
+++ b/package.json
@@ -1,135 +1,63 @@
 {
-  "name": "analytics-demo",
-  "version": "2.64.0",
-  "description": "analytics angular ionic",
-  "keywords": [],
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "author": "Dan Mateer",
+  "license": "MIT",
+  "scripts": {
+    "clean": "rm -rf build && mkdir build",
+    "build-server": "babel -d ./build ./ -s --ignore 'node_modules/**/*.js'",
+    "build": "npm run clean && npm run build-server",
+    "lint": "eslint source/ --quiet",
+    "debug:local": "NODE_ENV=local nodemon --inspect --exec babel-node server.js --source-maps",
+    "debug": "node --debug ./build/index.js",
+    "validate": "npm run lint; npm run test && npm outdated --depth 0",
+    "test": "npm run test-models && npm run test-apis",
+    "test-apis": "NODE_ENV=local babel-node ./test/apis",
+    "test-models": "NODE_ENV=local babel-node ./test/models",
+    "test-routes": "NODE_ENV=local babel-node ./test/middlewares",
+    "production": "NODE_ENV=production nodemon --exec babel-node server.js",
+    "development": "NODE_ENV=development nodemon --exec babel-node server.js",
+    "local": "NODE_ENV=local nodemon --exec babel-node server.js",
+    "install-step1": "yarn add  @babel/core @babel/cli @babel/preset-env @babel/node nodemon eslint eslint-config-airbnb-base eslint-plugin-import semistandard --dev",
+    "install-step2": "yarn add express express-session graphql graphql-server-express graphql-subscriptions graphql-tools mongoose subscriptions-transport-ws connect-mongo bcryptjs jsonwebtoken graphql-redis-subscriptions",
+    "run-import": "NODE_ENV=development nodemon --exec babel-node cronjob/downloadMenu.js"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.0",
+    "@babel/node": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.2.0",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "faker": "^4.1.0",
+    "handlebars": "^4.1.2",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.18.7",
+    "semistandard": "^13.0.1"
+  },
   "dependencies": {
-    "assert": "~1.3.0",
-    "async": "~2.0.1",
-    "auth": "latest",
-    "aws-sdk": "~2.224.1",
-    "aws-xray-sdk": "~1.1.1",
-    "bcryptjs": "~2.4.3",
-    "bindings": "~1.2.1",
-    "bluebird": "latest",
-    "body-parser": "~1.10.1",
-    "coffeescript": "latest",
-    "connect-redis": "3.1.0",
-    "connect-timeout": "~1.7.0",
-    "continuation-local-storage": "~3.2.0",
-    "convict": "~4.4.0",
-    "correlation-id": "~2.1.1",
-    "cors": "~2.8.1",
-    "csvtojson": "1.1.12",
-    "decree": "latest",
+    "@babel/runtime": "^7.4.3",
+    "aws-sdk": "^2.395.0",
+    "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^2.0.3",
+    "cors": "^2.8.5",
+    "cron": "^1.7.1",
+    "deep-diff": "^1.0.2",
     "dotenv": "^8.0.0",
-    "elasticsearch": "~14.2.2",
-    "expect.js": "~0.3.1",
-    "express": "~4.16.3",
-    "express-partials": "0.3.0",
-    "express-useragent": "~1.0.12",
-    "findup-sync": "latest",
-    "firebase-admin": "~5.12.0",
-    "fs-extra": "~0.30.0",
-    "fs-extra-promise": "~0.4.1",
-    "graceful-fs": "~4.1.2",
-    "grunt": "~1.0.1",
-    "grunt-ngdocs": "^0.2.11",
-    "hiredis": "~0.5.0",
-    "hmacsha1": "~1.0.0",
-    "http-aws-es": "~3.1.3",
-    "include-all": "~0.1.3",
-    "influx": "~5.0.7",
-    "jade": "~1.7.0",
-    "jasmine-core": "^3.3.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "jquery": "~2.2.1",
-    "json2csv": "3.7.1",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "googleapis": "^40.0.1",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "karma-jasmine": "^2.0.1",
-    "knex": "~0.12.9",
-    "kue": "~0.11.5",
-    "libpq": "~1.8.7",
-    "lodash": "~4.14.2",
-    "md5": "~2.2.1",
-    "mkdirp": "~0.5.1",
-    "moment": "2.18.0",
-    "moment-duration-format": "^2.2.2",
-    "moment-timezone": "~0.5.11",
-    "ncp": "~2.0.0",
-    "ngreact": "^0.5.2",
-    "ngrok": "^3.1.1",
-    "node-dm": "2.1.1",
-    "node-schedule": "~1.1.1",
-    "node-uuid": "1.4.7",
-    "node-zip": "~1.1.1",
-    "nopt": "latest",
-    "numeral": "~1.5.3",
-    "on-finished": "~2.3.0",
-    "optimist": "latest",
-    "owasp-password-strength-test": "~1.3.0",
-    "passport": "latest",
-    "passport-custom": "^1.0.5",
-    "passport-local": "latest",
-    "passport-saml": "~0.15.0",
-    "password-generator": "~2.1.0",
-    "pg": "~6.4.2",
-    "pg-native": "~2.2.0",
-    "pretty-error": "~2.0.2",
-    "prop-types": "^15.7.2",
-    "protractor-beautiful-reporter": "~0.5.0",
-    "raven": "~2.5.0",
-    "rc": "~1.1.6",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react2angular": "^4.0.6",
-    "redis": "~2.6.2",
-    "request": "~2.81.0",
-    "request-promise": "~4.1.0",
-    "require-directory": "~2.1.0",
-    "sails-generate-auth": "~0.3.1",
-    "sails-hook-dotenv": "~0.1.1",
-    "sails-postgresql": "~0.11.4",
-    "sails-redis": "~0.10.5",
-    "sequelize": "~3.33.0",
-    "sequelize-cli": "~2.4.0",
-    "sequelize-to-json": "~0.10.2",
-    "sinon": "^5.0.1-next.1",
-    "skipper": "~0.6.4",
-    "slurp": "~0.6.2",
-    "socket.io-client": "~1.4.8",
-    "tldjs": "~2.2.0",
-    "tmp": "0.0.28",
-    "toposort-class": "~1.0.1",
-    "uglify-es": "github:mishoo/UglifyJS2#harmony",
-    "unzip": "~0.1.11",
-    "uuid": "~2.0.2",
-    "waterline": "~0.12.2",
-    "winston": "~2.3.1",
-    "winston-logstash": "~0.4.0",
-    "xss": "~1.0.3"
-  },
-  "resolutions": {
-    "babel-core": "7.0.0-bridge.0",
-    "angular": "~1.4.14"
-  },
-  "browserslist": [
-    "> 2%",
-    "not dead"
-  ],
-  "jest": {
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
-    "setupFiles": [
-      "./assets/react/reactTestRunner.js"
-    ],
-    "testMatch": [
-      "**/assets/react/**/*.test.js?(x)"
-    ],
-    "transform": {
-      "^.+\\.jsx?$": "<rootDir>/node_modules/babel-jest"
-    }
-  },
-  "sideEffects": true
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
+    "mongoose": "^5.3.14",
+    "pug": "^2.0.3",
+    "uuid": "^3.3.2",
+    "xml-js": "^1.6.11"
+  }
 }
