--- a/package.json
+++ b/package.json
@@ -1,63 +1,82 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "author": "Dan Mateer",
-  "license": "MIT",
-  "scripts": {
-    "clean": "rm -rf build && mkdir build",
-    "build-server": "babel -d ./build ./ -s --ignore 'node_modules/**/*.js'",
-    "build": "npm run clean && npm run build-server",
-    "lint": "eslint source/ --quiet",
-    "debug:local": "NODE_ENV=local nodemon --inspect --exec babel-node server.js --source-maps",
-    "debug": "node --debug ./build/index.js",
-    "validate": "npm run lint; npm run test && npm outdated --depth 0",
-    "test": "npm run test-models && npm run test-apis",
-    "test-apis": "NODE_ENV=local babel-node ./test/apis",
-    "test-models": "NODE_ENV=local babel-node ./test/models",
-    "test-routes": "NODE_ENV=local babel-node ./test/middlewares",
-    "production": "NODE_ENV=production nodemon --exec babel-node server.js",
-    "development": "NODE_ENV=development nodemon --exec babel-node server.js",
-    "local": "NODE_ENV=local nodemon --exec babel-node server.js",
-    "install-step1": "yarn add  @babel/core @babel/cli @babel/preset-env @babel/node nodemon eslint eslint-config-airbnb-base eslint-plugin-import semistandard --dev",
-    "install-step2": "yarn add express express-session graphql graphql-server-express graphql-subscriptions graphql-tools mongoose subscriptions-transport-ws connect-mongo bcryptjs jsonwebtoken graphql-redis-subscriptions",
-    "run-import": "NODE_ENV=development nodemon --exec babel-node cronjob/downloadMenu.js"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/node": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.18.2",
-    "faker": "^4.1.0",
-    "handlebars": "^4.1.2",
-    "mocha": "^6.2.0",
-    "nodemon": "^1.19.1",
-    "semistandard": "^13.0.1"
-  },
+  "name": "analytics-demo",
+  "version": "2.64.0",
+  "description": "Checklist and Inspection manager",
+  "keywords": [],
   "dependencies": {
-    "@babel/runtime": "^7.5.5",
-    "aws-sdk": "^2.502.0",
-    "axios": "^0.19.0",
-    "bcryptjs": "^2.4.3",
-    "connect-mongo": "^2.0.3",
-    "cors": "^2.8.5",
-    "cron": "^1.7.1",
-    "deep-diff": "^1.0.2",
-    "dotenv": "^8.0.0",
-    "express": "^4.17.1",
-    "express-session": "^1.16.2",
-    "googleapis": "^40.0.1",
-    "joi": "^14.3.1",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.26",
-    "mongoose": "^5.6.7",
-    "pug": "^2.0.4",
-    "uuid": "^3.3.2",
-    "xml-js": "^1.6.11"
-  }
+        "@moebius/http-graceful-shutdown": "^1.1.0",
+        "@newrelic/native-metrics": "^4.1.0",
+        "@sentry/node": "^4.6.6",
+        "@types/amqplib": "^0.5.12",
+        "@types/datadog-metrics": "^0.6.0",
+        "@types/deep-extend": "^0.4.31",
+        "@types/express": "^4.16.1",
+        "@types/jest": "^24.0.11",
+        "@types/joi": "^14.3.3",
+        "@types/jsonfile": "^4.0.1",
+        "@types/mock-knex": "^0.4.0",
+        "@types/newrelic": "^4.11.0",
+        "@types/node": "^10.12.18",
+        "@types/node-fetch": "^2.3.3",
+        "@types/request-promise-native": "^1.0.15",
+        "@types/swagger-jsdoc": "0.0.2",
+        "@types/swagger-ui-express": "^3.0.0",
+        "amqplib": "^0.5.3",
+        "body-parser": "^1.18.3",
+        "datadog-metrics": "^0.8.1",
+        "dd-trace": "^0.10.3",
+        "deep-extend": "^0.6.0",
+        "express": "^4.16.4",
+        "express-correlation-id": "^1.2.1",
+        "fs": "^0.0.1-security",
+        "http-status-codes": "^1.3.2",
+        "jsonfile": "^4.0.0",
+        "knex": "^0.19.0",
+        "newrelic": "^5.9.1",
+        "node-fetch": "^2.5.0",
+        "pg": "^7.8.0",
+        "source-map-support": "^0.5.10",
+        "swagger-jsdoc": "^3.2.9",
+        "swagger-ui-express": "^4.0.2",
+        "tsoa": "^2.3.8",
+        "typescript": "^3.4.1"
+    },
+    "devDependencies": {
+        "@stryker-mutator/core": "^2.0.0",
+        "@stryker-mutator/html-reporter": "^2.0.0",
+        "@stryker-mutator/jest-runner": "^2.0.0",
+        "@stryker-mutator/typescript": "^2.0.0",
+        "@types/nock": "^10.0.1",
+        "get-port": "^5.0.0",
+        "jest": "^24.5.0",
+        "jest-junit": "^6.4.0",
+        "mock-knex": "^0.4.4",
+        "nock": "^10.0.6",
+        "stryker-cli": "^1.0.0",
+        "ts-jest": "^24.0.0",
+        "tslint": "^5.14.0"
+    },
+  "resolutions": {
+    "babel-core": "7.0.0-bridge.0",
+    "angular": "~1.4.14"
+  },
+  "browserslist": [
+    "> 2%",
+    "not dead"
+  ],
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "setupFiles": [
+      "./assets/react/reactTestRunner.js"
+    ],
+    "testMatch": [
+      "**/assets/react/**/*.test.js?(x)"
+    ],
+    "transform": {
+      "^.+\\.jsx?$": "<rootDir>/node_modules/babel-jest"
+    }
+  },
+  "sideEffects": true
 }
