--- a/package.json
+++ b/package.json
@@ -1,64 +1,112 @@
-
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "author": "Dan M",
-  "license": "MIT",
-  "scripts": {
-    "clean": "rm -rf build && mkdir build",
-    "build-server": "babel -d ./build ./ -s --ignore 'node_modules/**/*.js'",
-    "build": "npm run clean && npm run build-server",
-    "lint": "eslint source/ --quiet",
-    "debug:local": "NODE_ENV=local nodemon --inspect --exec babel-node server.js --source-maps",
-    "debug": "node --debug ./build/index.js",
-    "validate": "npm run lint; npm run test && npm outdated --depth 0",
-    "test": "npm run test-models && npm run test-apis",
-    "test-apis": "NODE_ENV=local babel-node ./test/apis",
-    "test-models": "NODE_ENV=local babel-node ./test/models",
-    "test-routes": "NODE_ENV=local babel-node ./test/middlewares",
-    "production": "NODE_ENV=production nodemon --exec babel-node server.js",
-    "development": "NODE_ENV=development nodemon --exec babel-node server.js",
-    "local": "NODE_ENV=local nodemon --exec babel-node server.js",
-    "install-step1": "yarn add  @babel/core @babel/cli @babel/preset-env @babel/node nodemon eslint eslint-config-airbnb-base eslint-plugin-import semistandard --dev",
-    "install-step2": "yarn add express express-session graphql graphql-server-express graphql-subscriptions graphql-tools mongoose subscriptions-transport-ws connect-mongo bcryptjs jsonwebtoken graphql-redis-subscriptions",
-    "run-import": "NODE_ENV=development nodemon --exec babel-node cronjob/downloadMenu.js"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/node": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.18.2",
-    "faker": "^4.1.0",
-    "handlebars": "^4.1.2",
-    "mocha": "^6.2.0",
-    "nodemon": "^1.19.1",
-    "semistandard": "^13.0.1"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.5.5",
-    "aws-sdk": "^2.502.0",
-    "axios": "^0.19.0",
-    "bcryptjs": "^2.4.3",
-    "connect-mongo": "^2.0.3",
-    "cors": "^2.8.5",
-    "cron": "^1.7.1",
-    "deep-diff": "^1.0.2",
-    "dotenv": "^8.0.0",
-    "express": "^4.17.1",
-    "express-session": "^1.16.2",
-    "googleapis": "^40.0.1",
-    "joi": "^14.3.1",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.26",
-    "mongoose": "^5.6.7",
-    "pug": "^2.0.4",
-    "uuid": "^3.3.2",
-    "xml-js": "^1.6.11"
-  }
+    "name": "analytics demo",
+    "version": "0.0.4",
+    "author": {
+        "name": "Dan Mateer",
+        "email": "dmateer@gmail.com",
+        "url": "https://danmateer.com/"
+    },
+    "scripts": {
+        "preinstall": "sudo npm install -g typescript && sudo npm install -g ts-node && sudo npm install -g nodemon",
+        "start": "nodemon --watch source --ignore */*.spec.ts --exec ts-node source/server.ts",
+        "test": "mocha --reporter spec --report lcovonly --compilers ts:ts-node/register tests/**/*.test.ts",
+        "travis": "mocha --reporter spec --report lcovonly --compilers ts:ts-node/register tests/**/*.test.ts",
+        "cover": "istanbul cover --no-default-excludes --hook-run-in-context ./node_modules/mocha/bin/_mocha -- -R spec tests/core/**/*.test.ts --report lcovonly --compilers ts:ts-node/register",
+        "build": "ng build --prod --app home && ng build --prod --app home-server",
+        "build-home": "ng build --prod --app home && ng build --prod --app home-server"
+    },
+    "bugs": {
+        "url": "https://github.com/chrissmejia/JSloth/issues",
+        "email": "me@chrissmejia.com"
+    },
+    "license": "(MIT OR Apache-2.0)",
+    "dependencies": {
+        "@agm/core": "^1.0.0-beta.2",
+        "@angular/animations": "^5.2.4",
+        "@angular/common": "^5.2.4",
+        "@angular/compiler": "^5.2.4",
+        "@angular/core": "^5.2.4",
+        "@angular/forms": "^5.2.4",
+        "@angular/http": "^5.2.4",
+        "@angular/platform-browser": "^5.2.4",
+        "@angular/platform-browser-dynamic": "^5.2.4",
+        "@angular/router": "^5.2.4",
+        "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+        "@nguniversal/express-engine": "^5.0.0-beta.5",
+        "@types/cookie-parser": "^1.4.1",
+        "@types/jsonwebtoken": "^7.2.1",
+        "@types/mysql": "0.0.31",
+        "@types/nodemailer": "^3.1.3",
+        "angularjs-datepicker": "^2.1.23",
+        "aws-sdk": "^2.192.0",
+        "base64url": "^3.0.0",
+        "bcrypt-nodejs": "0.0.3",
+        "body-parser": "^1.18.3",
+        "bootstrap": "^4.0.0",
+        "chart.js": "^2.7.2",
+        "cli-color": "^1.2.0",
+        "connect-flash": "^0.1.1",
+        "cookie-parser": "^1.4.3",
+        "crypto": "^1.0.1",
+        "csurf": "^1.9.0",
+        "es6-promise": "^4.2.4",
+        "express": "^4.16.3",
+        "express-handlebars": "^3.0.0",
+        "express-session": "^1.15.6",
+        "fast-csv": "^2.4.1",
+        "gm": "^1.23.1",
+        "jsonwebtoken": "^8.3.0",
+        "knox-copy": "^0.4.0",
+        "morgan": "^1.9.0",
+        "multer": "^1.3.0",
+        "mysql": "^2.15.0",
+        "ncp": "^2.0.0",
+        "ng2-currency-mask": "^5.3.1",
+        "ng2-img-cropper": "^0.9.0",
+        "node-sass": "^4.9.0",
+        "nodemailer": "^4.4.2",
+        "nodemailer-express-handlebars": "^2.0.0",
+        "nodemailer-ses-transport": "^1.5.1",
+        "nodemon": "^1.17.5",
+        "npm": "^6.1.0",
+        "passport": "^0.4.0",
+        "passport-local": "^1.0.0",
+        "prerender-node": "^3.2.4",
+        "primeng": "^5.2.5",
+        "sharp": "^0.19.1",
+        "socket.io": "^2.1.1",
+        "swig-email-templates": "^5.0.0",
+        "ts-node": "^3.0.4",
+        "typescript": "^2.6.2",
+        "vcf": "^2.0.1",
+        "zone.js": "^0.8.20",
+        "zxcvbn": "^4.4.2"
+    },
+    "devDependencies": {
+        "@angular/cli": "^1.6.2",
+        "@angular/compiler-cli": "^5.0.0",
+        "@angular/language-service": "^5.0.0",
+        "@angular/platform-server": "^5.1.1",
+        "@types/body-parser": "0.0.33",
+        "@types/chai": "^3.4.34",
+        "@types/chai-http": "0.0.29",
+        "@types/cli-color": "^0.3.29",
+        "@types/express": "^4.11.1",
+        "@types/mocha": "^2.2.48",
+        "@types/morgan": "^1.7.32",
+        "chai": "^3.5.0",
+        "chai-http": "^4.0.0",
+        "coveralls": "^3.0.1",
+        "grunt": "^1.0.3",
+        "grunt-contrib-copy": "^1.0.0",
+        "grunt-contrib-watch": "^1.1.0",
+        "grunt-ts": "^6.0.0-beta.19",
+        "grunt-tslint": "^4.0.0",
+        "istanbul": "^0.4.5",
+        "jscoverage": "^0.6.0",
+        "mocha": "^5.2.0",
+        "mocha-lcov-reporter": "^1.2.0",
+        "tslint": "^4.2.0",
+        "zone.js": "^0.8.20"
+    }
 }
