--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "base64url": "^3.0.0",
         "bcrypt-nodejs": "0.0.3",
         "body-parser": "^1.18.3",
+        "bookshelf": "^0.10.4",
         "bootstrap": "^4.0.0",
         "chart.js": "^2.7.2",
         "cli-color": "^1.2.0",
@@ -56,7 +57,11 @@
         "express-session": "^1.15.6",
         "fast-csv": "^2.4.1",
         "gm": "^1.23.1",
+        "handlebars": "^4.0.12",
+        "hapi": "^16.1.0",
+        "intuit-oauth": "^1.4.0",
         "jsonwebtoken": "^8.3.0",
+        "knex": "^0.12.6",
         "knox-copy": "^0.4.0",
         "morgan": "^1.9.0",
         "multer": "^1.3.0",
@@ -74,6 +79,7 @@
         "passport-local": "^1.0.0",
         "prerender-node": "^3.2.4",
         "primeng": "^5.2.5",
+        "redis": "^2.8.0",
         "sharp": "^0.19.1",
         "socket.io": "^2.1.1",
         "swig-email-templates": "^5.0.0",
